# HiveGame

./: .gitignore  HiveGame.cabal  shell.nix
src/: Game.hs  Main.hs  Widget.hs
src/BasicUI/: HEvent.hs  MainWindow.hs  UI.hs  Widget.hs
src/GameWidget/: DebugPanel.hs  EventPanel.hs  GameEdit.hs  Terminal.hs
src/Hive/: Grid.hs  Hid.hs  Tools.hs
