cabal-version:      2.4
name:               HiveGame
version:            0.1.0.0
build-type:         Simple

executable HiveGame
    main-is:          Main.hs
    build-depends:    base
                    , vty
                    , vty-crossplatform
    other-modules:    Widget
                    , Game
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:   src
    default-language: Haskell2010
